--- a/acyclic-graphs.cabal
+++ b/acyclic-graphs.cabal
@@ -49,7 +49,7 @@ extra-source-files:  CHANGELOG.md
 
 library
   -- Modules exported by the library.
-  -- exposed-modules:
+  exposed-modules: Prototype
 
   -- Modules included in this library but not exported.
   -- other-modules:
@@ -59,6 +59,7 @@ library
 
   -- Other library packages from which modules are imported.
   build-depends:       base ^>=4.10.1.0
+                     , containers
 
   -- Directories containing source files.
   hs-source-dirs:      src
