--- a/acyclic-graphs.cabal
+++ b/acyclic-graphs.cabal
@@ -50,6 +50,7 @@ extra-source-files:  CHANGELOG.md
 library
   -- Modules exported by the library.
   exposed-modules: Prototype
+                 , General.Graph
 
   -- Modules included in this library but not exported.
   -- other-modules:
