--- a/acyclic-graphs.cabal
+++ b/acyclic-graphs.cabal
@@ -51,6 +51,7 @@ library
   -- Modules exported by the library.
   exposed-modules: Acyclic.Graph
                  , General.Graph
+                 , Prototype
 
   -- Modules included in this library but not exported.
   other-modules: Acyclic.Util
